# SHA

./: README.md
SHA-1/: CMakeLists.txt  SHA1Hash.cpp  SHA1Hash.h  main.cpp
SHA-384/: .clang-format  CMakeLists.txt  FkstHash.h  SHA384Hash.cpp  SHA384Hash.h  main.cpp
SHA-384/tests/: TestCases.cpp  testfile.txt
